<resources>

    <!-- Application level strings -->
    <string name="app_name" translatable="false">rIOTAndroid</string>

    <string name="preference_file_key" translatable="false">templar.riotandroid.PREFERENCE_FILE_KEY</string>
    <string name="ecosystem_name" translatable="false">ecosystem_name</string>
    <string name="firebase_token" translatable="false">firebase_token</string>

    <string name="endless_shadow_base" translatable="false">https://endless-shadow.herokuapp.com</string>
    <string name="endless_shadow_get_sensors" translatable="false">/rIOT/db/sensorFlow/sensorNames</string>
    <string name="endless_shadow_get_data" translatable="false">/rIOT/db/sensorFlow/sensorDatas</string>
    <string name="endless_shadow_create_token" translatable="false">/rIOT/db/userFlow</string>

    <!-- Menu Strings -->
    <string name="menu_refresh">Refresh</string>

    <!-- Main Activity Strings -->
    <string name="mainactivity_label">rIOT</string>
    <string name="houseArea_kitchen">Kitchen</string>

    <string name="main_expandCD">Expand List Button</string>

    <!-- Login Activity Strings -->
    <string name="login_logo">rIOT Logo</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_ecosystem_hint">Name your Ecosystem</string>
    <string name="login_pass1_hint">Enter a password</string>
    <string name="login_pass2_hint">Re-type password</string>
    <string name="login_button">ENTER!</string>
    <string name="missing_ecosystem">Please name your ecosystem</string>
    <string name="missing_pass1">Please choose a password</string>
    <string name="missing_pass2">Please re-type your password</string>
    <string name="nonmatching_pass">Your passwords do not match</string>

</resources>
